@@ -1,5 +1,13 @@
 2015-12-06  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/Makemodule.am (libe_loader_la_SOURCES): Remove
+	e-process-SREC.c
+	* e-hal/src/e-loader.c (int e_load_group): Deprecate SREC support.
+	(ee_process_ELF): Move function here from e-process-SREC.c
+	* e-hal/src/e-process-SREC.c: Remove.
+
+2015-12-06  Ola Jeppsson  <ola@adapteva.com>
+
 	* configure.ac (AC_ARG_ENABLE(esim)): Adjust help text.
 	* e-hal/Makemodule.am (noinst_HEADERS): Add esim-target.h.
 	(libe_loader_la_SOURCES): Add esim-target.c
